--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
   </head>
   <body>
     <header class="header">
-      <div class="header__container">
+      <div class="header__container container">
         <div class="header__logo-container">
           <div class="header__logo">
             <img
@@ -43,7 +43,7 @@
     </header>
     <section class="headline">
       <div class="headline__screen">
-        <div class="headline__container">
+        <div class="headline__container container">
           <h1 class="headline__title">Build stunning websites & apps.</h1>
           <p class="headline__text">
             Create live segments and target the right people for messages based on their behaviors.
@@ -63,7 +63,7 @@
       </div>
     </section>
     <section class="about">
-      <div class="about__container">
+      <div class="about__container container">
         <div class="about__article">
           <h3 class="about__title">What is it about?</h3>
           <p class="about__text">
@@ -79,7 +79,7 @@
       </div>
     </section>
     <div class="customers">
-      <div class="customers__container">
+      <div class="customers__container container">
         <div class="customers__item">
           <img
             src="https://gromcode.s3.eu-central-1.amazonaws.com/front-end/html-css/lesson24/hw1/logo-nyt.png"
@@ -125,7 +125,7 @@
       </div>
     </div>
     <section class="features">
-      <div class="features__container">
+      <div class="features__container container">
         <div class="features__face">
           <img
             src="https://gromcode.s3.eu-central-1.amazonaws.com/front-end/html-css/lesson24/hw1/hidden-ouch.png"
@@ -229,7 +229,7 @@
       </div>
     </section>
     <section class="inbox">
-      <div class="inbox__container">
+      <div class="inbox__container container">
         <div class="inbox__img-container">
           <img
             src="https://gromcode.s3.eu-central-1.amazonaws.com/front-end/html-css/lesson24/hw1/wheel.png"
@@ -268,7 +268,7 @@
       </div>
     </section>
     <section class="communication">
-      <div class="communication__container">
+      <div class="communication__container container">
         <div class="communication__block-top block-top">
           <div class="block-top__content">
             <h4 class="block-top__suptitle">Communicate Better</h4>
@@ -315,7 +315,7 @@
       </div>
     </section>
     <section class="audience">
-      <div class="audience__container">
+      <div class="audience__container container">
         <div class="audience__content">
           <h3 class="audience__label">Engage Visitors</h3>
           <h2 class="audience__title">Understand your audience</h2>
@@ -372,7 +372,7 @@
       </div>
     </section>
     <div class="customers">
-      <div class="customers__container">
+      <div class="customers__container container">
         <div class="customers__item">
           <img
             src="https://gromcode.s3.eu-central-1.amazonaws.com/front-end/html-css/lesson24/hw1/logo-nyt.png"
@@ -418,7 +418,7 @@
       </div>
     </div>
     <section class="feedback">
-      <div class="feedback__container">
+      <div class="feedback__container container">
         <h2 class="feedback__title">
           Trusted by the world’s most innovative businesses – big and small
         </h2>
@@ -443,7 +443,7 @@
       </div>
     </section>
     <section class="hiring">
-      <div class="hiring__container">
+      <div class="hiring__container container">
         <h2 class="hiring__title">We’re hiring</h2>
         <p class="hiring__text">
           We’re a team of lifelong learners. We’re equal parts left and right brained.
@@ -498,7 +498,7 @@
       </div>
     </section>
     <section class="order">
-      <div class="order__container">
+      <div class="order__container container">
         <figure class="order__img-container">
           <img
             src="https://gromcode.s3.eu-central-1.amazonaws.com/front-end/html-css/lesson24/hw1/illustration-window.png"
@@ -523,7 +523,7 @@
       </div>
     </section>
     <footer class="footer">
-      <div class="footer__container">
+      <div class="footer__container container">
         <div class="footer__top">
           <div class="logo">
             <figure class="logo__img-container">
@@ -596,8 +596,7 @@
         </div>
       </div>
       <div class="footer__line"></div>
-
-      <div class="footer__container">
+      <div class="footer__container container">
         <div class="footer__bottom-menu">
           <div class="footer__bottom-licens">
             <a href="#">Terms</a>
