--- a/index.html
+++ b/index.html
@@ -11,59 +11,62 @@
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
-    <header class="header">
-      <div class="header__container container">
-        <div class="header__logo-container">
-          <div class="header__logo">
+    <div class="_container">
+      <header class="header">
+        <div class="header__container">
+          <div class="header__logo-container">
+            <div class="header__logo">
+              <img
+                class="logo"
+                src="https://gromcode.s3.eu-central-1.amazonaws.com/front-end/html-css/lesson24/hw1/icon.png"
+                alt="Logo"
+              />
+            </div>
+            <div class="header__logo-titles">
+              <p class="header__label">Foundation</p>
+              <p class="header__sublabel">Startup landing template</p>
+            </div>
+          </div>
+          <nav class="header__menu">
+            <a class="header__link header__link_checked" href="#">Home</a>
+            <a class="header__link" href="#">Stories</a>
+            <a class="header__link header__link_arrow" href="#">Library</a>
+            <a class="header__button btn-blue" href="#">Get Started</a>
+          </nav>
+          <div class="header__hamburger-container">
             <img
-              class="logo"
-              src="https://gromcode.s3.eu-central-1.amazonaws.com/front-end/html-css/lesson24/hw1/icon.png"
-              alt="Logo"
+              class="header__hamburger"
+              src="https://gromcode.s3.eu-central-1.amazonaws.com/front-end/html-css/lesson24/hw1/icon-hamburger.png"
+              alt="Hamburger"
             />
           </div>
-          <div class="header__logo-titles">
-            <p class="header__label">Foundation</p>
-            <p class="header__sublabel">Startup landing template</p>
+        </div>
+      </header>
+      <div class="headline">
+        <div class="headline__screen">
+          <div class="headline__container">
+            <h1 class="headline__title">Build stunning websites & apps.</h1>
+            <p class="headline__text">
+              Create live segments and target the right people for messages based on their
+              behaviors.
+            </p>
+            <div class="headline__buttons">
+              <a href="#" class="headline__button btn-blue">Get Started</a>
+              <a href="#" class="headline__button btn-white">Learn More</a>
+            </div>
+          </div>
+          <div class="headline__img-wrapper">
+            <img
+              class="headline__img"
+              src="https://gromcode.s3.eu-central-1.amazonaws.com/front-end/html-css/lesson24/hw1/ouch.png"
+              alt="Men reed book"
+            />
           </div>
         </div>
-        <nav class="header__menu">
-          <a class="header__link header__link_checked" href="#">Home</a>
-          <a class="header__link" href="#">Stories</a>
-          <a class="header__link header__link_arrow" href="#">Library</a>
-          <a class="header__button btn-blue" href="#">Get Started</a>
-        </nav>
-        <div class="header__hamburger-container">
-          <img
-            class="header__hamburger"
-            src="https://gromcode.s3.eu-central-1.amazonaws.com/front-end/html-css/lesson24/hw1/icon-hamburger.png"
-            alt="Hamburger"
-          />
-        </div>
-      </div>
-    </header>
-    <section class="headline">
-      <div class="headline__screen">
-        <div class="headline__container container">
-          <h1 class="headline__title">Build stunning websites & apps.</h1>
-          <p class="headline__text">
-            Create live segments and target the right people for messages based on their behaviors.
-          </p>
-          <div class="headline__buttons">
-            <a href="#" class="headline__button btn-blue">Get Started</a>
-            <a href="#" class="headline__button btn-white">Learn More</a>
-          </div>
-        </div>
-        <div class="headline__img-wrapper">
-          <img
-            class="headline__img"
-            src="https://gromcode.s3.eu-central-1.amazonaws.com/front-end/html-css/lesson24/hw1/ouch.png"
-            alt="Men reed book"
-          />
-        </div>
-      </div>
-    </section>
+      </section>
+    </div>
     <section class="about">
-      <div class="about__container container">
+      <div class="about__container">
         <div class="about__article">
           <h3 class="about__title">What is it about?</h3>
           <p class="about__text">
@@ -78,8 +81,9 @@
         </div>
       </div>
     </section>
+
     <div class="customers">
-      <div class="customers__container container">
+      <div class="customers__container">
         <div class="customers__item">
           <img
             src="https://gromcode.s3.eu-central-1.amazonaws.com/front-end/html-css/lesson24/hw1/logo-nyt.png"
@@ -125,7 +129,7 @@
       </div>
     </div>
     <section class="features">
-      <div class="features__container container">
+      <div class="features__container">
         <div class="features__face">
           <img
             src="https://gromcode.s3.eu-central-1.amazonaws.com/front-end/html-css/lesson24/hw1/hidden-ouch.png"
@@ -229,7 +233,7 @@
       </div>
     </section>
     <section class="inbox">
-      <div class="inbox__container container">
+      <div class="inbox__container">
         <div class="inbox__img-container">
           <img
             src="https://gromcode.s3.eu-central-1.amazonaws.com/front-end/html-css/lesson24/hw1/wheel.png"
@@ -268,7 +272,7 @@
       </div>
     </section>
     <section class="communication">
-      <div class="communication__container container">
+      <div class="communication__container">
         <div class="communication__block-top block-top">
           <div class="block-top__content">
             <h4 class="block-top__suptitle">Communicate Better</h4>
@@ -315,7 +319,7 @@
       </div>
     </section>
     <section class="audience">
-      <div class="audience__container container">
+      <div class="audience__container">
         <div class="audience__content">
           <h3 class="audience__label">Engage Visitors</h3>
           <h2 class="audience__title">Understand your audience</h2>
@@ -372,7 +376,7 @@
       </div>
     </section>
     <div class="customers">
-      <div class="customers__container container">
+      <div class="customers__container">
         <div class="customers__item">
           <img
             src="https://gromcode.s3.eu-central-1.amazonaws.com/front-end/html-css/lesson24/hw1/logo-nyt.png"
@@ -418,7 +422,7 @@
       </div>
     </div>
     <section class="feedback">
-      <div class="feedback__container container">
+      <div class="feedback__container">
         <h2 class="feedback__title">
           Trusted by the world’s most innovative businesses – big and small
         </h2>
@@ -443,7 +447,7 @@
       </div>
     </section>
     <section class="hiring">
-      <div class="hiring__container container">
+      <div class="hiring__container">
         <h2 class="hiring__title">We’re hiring</h2>
         <p class="hiring__text">
           We’re a team of lifelong learners. We’re equal parts left and right brained.
@@ -498,7 +502,7 @@
       </div>
     </section>
     <section class="order">
-      <div class="order__container container">
+      <div class="order__container">
         <figure class="order__img-container">
           <img
             src="https://gromcode.s3.eu-central-1.amazonaws.com/front-end/html-css/lesson24/hw1/illustration-window.png"
@@ -523,7 +527,7 @@
       </div>
     </section>
     <footer class="footer">
-      <div class="footer__container container">
+      <div class="footer__container">
         <div class="footer__top">
           <div class="logo">
             <figure class="logo__img-container">
@@ -596,7 +600,7 @@
         </div>
       </div>
       <div class="footer__line"></div>
-      <div class="footer__container container">
+      <div class="footer__container">
         <div class="footer__bottom-menu">
           <div class="footer__bottom-licens">
             <a href="#">Terms</a>
